Fixed spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -67,19 +67,19 @@ img:nth-child(5) {
   img:nth-child(2) {
     display: inline-block;
     float: left;
-    width: 33%;
+    width: 33.3333%;
   }
 
   img:nth-child(3) {
     display: inline-block;
     float: left;
-    width: 33%;
+    width: 33.3333%;
   }
 
   img:nth-child(4) {
     display: inline-block;
     float: left;
-    width: 33%;
+    width: 33.3333%;
   }
 
   img:nth-child(5) {
